# test-github-actions

./: .commitlintrc.json  .pre-commit-config.yaml  .releaserc.json  404.html  CONTRIBUTING.md  README.md  git-branch-strategy.md  index.html  mkdocs.yaml  pyproject.toml  requirements.txt
.github/: release.yaml  release.yml
.github/workflows/: ci.yml  docker.yaml  docker.yml  label.yml  mkdocs.yaml  pre-commit.yaml  release.yaml  semantic-release.yaml  semver.yml
code/: constant.py  feature.py  log.py  module.py  print.py
docker/: dockerfile
docs/: index.md
docs/part1/: general.md  introduction.md
docs/part2/: introduction.md
duties/: __init__.py  feature_one.py  main.py
part1/general/: index.html
part1/introduction/: index.html
part2/introduction/: index.html
search/: search_index.json
